changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Apply patch #1964563: Fix compile error when "MEMORY_DEBUG" is defined in config.h.
 server/server.c
Arvid Norlander 2008-05-16

Apply patch #1964058: Fix missing \0 in buffer in add_object_to_socklist.
 socket/item.c
Arvid Norlander 2008-05-16

Apply patch #1964051: Valgrind error fix: Bad format string.
 lib/i18n/messages.en messages.fr
Arvid Norlander 2008-05-16

Fix incorrect boundary of the object type array, courtesy of Arvid Norlander.
 include/define.h
Yann "gros" Chachkoff 2008-05-16

Fix memory leaks, courtesy Arvid Norlander.
 common/dialog.c
Andreas Kirschbaum 2008-05-23

Added the possibility to build the server outside of its source directory.
 plugins/citylife/Makefile.am
 plugins/cfrhg/Makefile.am
 plugins/template/Makefile.am
 plugins/cfnewspaper/Makefile.am
Arvid Norlander 2008-05-14

Fixed bug #1962926 "Fix for crash on division by zero", courtesy of Arvid Norlander
 common/item.c
Yann "gros" Chachkoff 2008-05-13

Removed 'context' stuff as it isn't used here. Clean event handling.
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim.h cfanim_proto.h
Nicolas Weeger 2008-05-12

Add 'moveto' command, and 'byname' victim type. Fix potential memory leak.
Enable moves to take more than one tick.
 doc/Developers/plugins.doc/cfanim/animfiles.txt
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim.h cfanim_proto.h
Nicolas Weeger 2008-05-12

Wrapper for move_to(). Fix invalid move_to parameter order.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2008-05-12
