@@ -44,18 +44,6 @@
 #define DEBUG_PATH
 #endif
 
-#if 0
-/**
- * Define TEST_PATH to compile this file as a stand-alone self-test application
- * for the functions.
- */
-#define TEST_PATH
-
-#define LOG fprintf
-#define llevDebug stderr
-#define llevError stderr
-#endif
-
 /**
  * Combines 2 paths, which can be relative.
  *
@@ -201,99 +189,3 @@ char *path_combine_and_normalize(const char *src, const char *dst, char* path, i
     path_normalize(path);
     return(path);
 }
-
-#if defined(TEST_PATH)
-static void check_combine(const char *src, const char *dst, const char *exp) {
-    const char *res;
-
-    fprintf(stderr, "path_combine(%s, %s) = ", src, dst);
-    res = path_combine(src, dst);
-    fprintf(stderr, "%s", res);
-    if (strcmp(res, exp) != 0) {
-        fprintf(stderr, ", should be %s\n", exp);
-    } else {
-        fprintf(stderr, " (OK)\n");
-    }
-}
-
-static void check_normalize(const char *path, const char *exp0) {
-    char tmp[HUGE_BUF];
-    char exp[HUGE_BUF];
-
-    strcpy(exp, exp0 == NULL ? path : exp0);
-
-    strcpy(tmp, path);
-    fprintf(stderr, "path_normalize(%s) = ", tmp);
-    path_normalize(tmp);
-    fprintf(stderr, "%s", tmp);
-    if (strcmp(tmp, exp) != 0) {
-        fprintf(stderr, ", should be %s\n", exp);
-    } else {
-        fprintf(stderr, " (OK)\n");
-    }
-}
-
-static void check_combine_and_normalize(const char *src, const char *dst, const char *exp) {
-    char res[HUE_BUF];
-
-    fprintf(stderr, "path_combine_and_normalize(%s, %s) = ", src, dst);
-    path_combine_and_normalize(src, dst, res, sizeof(res));
-    fprintf(stderr, "%s", res);
-    if (strcmp(res, exp) != 0) {
-        fprintf(stderr, ", should be %s\n", exp);
-    } else {
-        fprintf(stderr, " (OK)\n");
-    }
-}
-
-int main() {
-    check_combine("/path1/file1", "/path2/file2", "/path2/file2");
-    check_combine("path1/file1", "/path2/file2", "/path2/file2");
-    check_combine("/path1/file1", "path2/file2", "/path1/path2/file2");
-    check_combine("path1/file1", "path2/file2", "path1/path2/file2");
-    check_combine("/path1", "/path2", "/path2");
-    check_combine("path1", "/path2", "/path2");
-    check_combine("/path1", "path2", "/path2");
-    check_combine("path1", "path2", "path2");
-
-    check_normalize("", NULL);
-    check_normalize("/", NULL);
-    check_normalize("path1/file1", NULL);
-    check_normalize("/path1/file1", NULL);
-    check_normalize("/path1//file1", "/path1/file1");
-    check_normalize("//path1/file1", "/path1/file1");
-    check_normalize("///////x////////y///////z////////", "/x/y/z");
-    check_normalize("/a/b/../c/d/../e/../../f/g/../h", "/a/f/h");
-    check_normalize("//a//b//..//c//d//..//e//..//..//f//g//..//h", "/a/f/h");
-    check_normalize("../a", NULL);
-    check_normalize("a/../../b", "../b");
-    check_normalize("/../a", "/a");
-    check_normalize("/a/../../b", "/b");
-    check_normalize("./b/./c/.d/..e/./f", "b/c/.d/..e/f");
-    check_normalize("/b/././././e", "/b/e");
-    check_normalize(".", ""); /* maybe the result should be "."? */
-    check_normalize("/.", "/");
-    check_normalize("./", ""); /* maybe the result should be "."? */
-    check_normalize("/a/b/..", "/a");
-    check_normalize("/a/b/../..", "/");
-    check_normalize("/a/b/../../..", "/");
-    check_normalize("a/b/..", "a");
-    check_normalize("a/b/../..", "");
-    check_normalize("a/b/../../..", "..");
-
-    check_combine_and_normalize("/path1/file1", "/path2/file2", "/path2/file2");
-    check_combine_and_normalize("path1/file1", "/path2/file2", "/path2/file2");
-    check_combine_and_normalize("/path1/file1", "path2/file2", "/path1/path2/file2");
-    check_combine_and_normalize("/path1", "/path2", "/path2");
-    check_combine_and_normalize("path1", "/path2", "/path2");
-    check_combine_and_normalize("/path1", "path2", "/path2");
-    check_combine_and_normalize("/path1/file1/../u", "path2/x/../y/z/../a/b/..", "/path1/path2/y/a");
-    check_combine_and_normalize("/path1/file1", "/path2//file2", "/path2/file2");
-    check_combine_and_normalize("/path1/file1", "/..", "/");
-    check_combine_and_normalize("/path1/file1", "../x", "/x");
-    check_combine_and_normalize("/path1/file1", "../../../x", "/x");
-    check_combine_and_normalize("/path1/file1", "/.x/..x/...x/x", "/.x/..x/...x/x");
-
-    return(0);
-}
-#endif
