@@ -18,9 +18,9 @@ $(top_builddir)/test/toolkit/libtoolkit_common.a:
 # disabled tests, enable them when they have some real content
 # check_anim check_button check_exp check_friend check_glue check_holy check_image check_info check_init
 # check_links check_living check_logger check_los check_map
-# check_path check_player check_porting check_readable check_recipe check_re-cmp check_region
+# check_player check_porting check_readable check_recipe check_re-cmp check_region
 # check_time check_treasure check_utils
-TESTS= check_arch check_item check_loader check_object check_shstr check_time
+TESTS= check_arch check_item check_loader check_object check_path check_shstr check_time
 
 clean-local:
 	$(RM) .autorun.xml
