@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Apply patch #1965969: Unit test for common/path.c.
+ common/path.c
+ test/unit/common/check_path.c Makefile.am
+Arvid Norlander 2008-05-17
+
 Apply patch #1964563: Fix compile error when "MEMORY_DEBUG" is defined in config.h.
  server/server.c
 Arvid Norlander 2008-05-16
